--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Quotes</title>
-  <base href="/quotes">
+  <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Patrick+Hand" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
-  <app-forms></app-forms>
 </body>
 </html>
